--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -10,7 +10,7 @@
 .header__logoContainer {
   display: flex;
   justify-content: center;
-  background-color: var(--color-foreground);
+  background-color: var(--color-header);
   padding: 1rem;  
 }
 
@@ -40,7 +40,7 @@
 .header__nav {
   display: flex;
   justify-content: center;
-  background-color: var(--color-foreground);
+  background-color: var(--color-nav);
   padding: 0.5rem 1rem;
   border-bottom: 0.5rem solid var(--color-tertiary);
 }
