--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -38,6 +38,13 @@
   margin: 0 1rem;
 }
 
+.header__dadJokeContainer {
+  display: flex;
+  justify-content: center;
+  background-color: var(--color-header);
+  padding: 1rem 1rem 2rem 1rem;
+}
+
 .header__nav {
   display: flex;
   justify-content: center;
