--- a/styles/DadJoke.module.css
+++ b/styles/DadJoke.module.css
@@ -1,6 +1,6 @@
 .dadJoke {
     color: var(--color-dadjoke);
     font-size: 1.5rem;
-    display: flex;
+    padding-bottom: 2rem;   
   justify-content: center;
 }
