--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -17,7 +17,8 @@
 .header__logoContainerLink {
   text-decoration: none;
   display: inline-flex;
-  width: 100%;
+  width: 10%;
+  height: 10%;  
   justify-content: center;
   object-fit: contain;
 }
@@ -47,7 +48,7 @@
 }
 
 .header__nav {
-  display: flex;
+  display: flex; 
   justify-content: center;
   background-color: var(--color-nav);
   padding: 0.5rem 1rem;
