Testing new width and height settings on logo

--- a/styles/DadJoke.module.css
+++ b/styles/DadJoke.module.css
@@ -1,6 +1,6 @@
 .dadJoke {
     color: var(--color-dadjoke);
     font-size: 1.5rem;
-    padding-bottom: 2rem;   
+    display: flex;
   justify-content: center;
 }
