--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -4,7 +4,8 @@
 }
 
 .header__logoBanner {
-  object-fit: contain; 
+  width: 25%;
+  height: auto;
 }
 
 .header__logoContainer {
@@ -16,9 +17,9 @@
 
 .header__logoContainerLink {
   text-decoration: none;
-  display: inline-flex;  
+  display: inline-flex;
+  width: 100%;
   justify-content: center;
-  object-fit: contain;
 }
 
 .header__logoContainerLink:focus {
@@ -42,11 +43,10 @@
   justify-content: center;
   background-color: var(--color-header);
   padding: 1rem 1rem 2rem 1rem;
-  height: auto;
 }
 
 .header__nav {
-  display: flex; 
+  display: flex;
   justify-content: center;
   background-color: var(--color-nav);
   padding: 0.5rem 1rem;
