--- a/styles/Spotify.module.css
+++ b/styles/Spotify.module.css
@@ -1,13 +1,30 @@
 .currentlyPlayingContainer {
+    display: flex;
+    flex-direction: row;
+    align-items:center;
     color: var(--color-foregrund);    
     width: 100%;
     max-width: var(--wrapper-max-width);
     margin-left: auto;
     margin-right: auto;
     padding: 1rem;
+
+
 }
 
-.currentlyPlaying {
-    padding-left: 1rem;
-    display: inline;     
+.nowPlaying {
+    margin-left: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+.track {
+    margin-left: 1rem;
+    display: block;
+    text-align: left;
+}
+
+.titleTrack {
+    font-weight: bold;
 }
