--- a/styles/UsesEntry.module.css
+++ b/styles/UsesEntry.module.css
@@ -1,9 +1,17 @@
 .entryContainer {
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto;    
     margin-bottom: 4rem;
-    max-width: var(--wrapper-max-width);
-    padding: 1rem;
+    max-width: var(--wrapper-max-width);    
+    padding: 1rem;    
+}
+
+@media screen and (min-width: 768px) {
+    .entryContainer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        max-width: 98rem;       
+    }
 }
 
 .toolNameHeader {
@@ -19,4 +27,5 @@
 
 .entry{
     margin-bottom: 6rem;
+    padding-right: 2rem;
 }
